[project]
name = "BMON"
version = "1.0.0"
description = "BMON Building Monitoring System"
requires-python = "~=3.11.1"
dependencies = [
    "certifi~=2020.12",
    "chardet~=4.0",
    "concurrent-log-handler~=0.9",
    "django~=2.2",
    "django-extensions~=3.1",
    "django-lockdown~=4.0",
    "duckdb~=1.2",
    "et-xmlfile~=1.0",
    "gunicorn~=20.0",
    "idna~=2.10",
    "legacy-cgi~=2.6",
    "markdown~=3.3",
    "modbus-tk~=1.1",
    "numexpr~=2.10",
    "openpyxl~=3.0",
    "pandas~=2.2",
    "ply~=3.11",
    "pyasn1~=0.4",
    "pycryptodomex~=3.10",
    "pyserial~=3.5",
    "pysmi~=0.3",
    "pyyaml~=6.0",
    "questionary~=1.10",
    "requests~=2.31",
    "scikit-learn~=1.6",
    "selenium~=3.141",
    "sqlparse~=0.4",
    "statsmodels~=0.14",
    "twilio~=9.2",
    "urllib3~=1.26",
    "xlrd~=2.0",
    "xlwt~=1.3",
]
