[project]
name = "BMON"
version = "1.0.0"
description = "BMON Building Monitoring System"
requires-python = "~=3.11.1"    # can't go higher than 3.11 with Django 2.x due to email sending error
dependencies = [
    "concurrent-log-handler~=0.9",
    "django~=2.2",
    "django-extensions~=3.1",
    "django-lockdown~=4.0",
    "duckdb~=1.2",
    "gunicorn~=20.0",
    "legacy-cgi~=2.6", # needed by Django to replace deprecated cgi module
    "lxml~=5.4",
    "markdown~=3.3",
    "modbus-tk~=1.1",
    "openpyxl~=3.0",
    "pandas~=2.2",
    "pyyaml~=6.0",
    "questionary~=1.10",
    "requests~=2.31",
    "scikit-learn~=1.6",
    "selenium~=3.141",
    "statsmodels~=0.14",
    "twilio~=9.2",
    "xlrd~=2.0",
    "xlwt~=1.3",
]
